package main.java.com.library.model.enums;

public enum Genre {
    FICTION,
    SCIENCE_FICTION,
    MYSTERY,
    BIOGRAPHY,
    TECHNOLOGY
}