package main.java.com.library.model.enums;

public enum LoanStatus {
    ACTIVE,
    RETURNED,
    OVERDUE
}